--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,19 +1,14 @@
 
 <h1>Editing Book</h1>
-<%= form_with model: @list do |f| %>
-
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+<%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
+<h4>Title</h4>
+<%= f.text_field :title %>
+<h4>Body</h4>
+<%= f.text_area :body %>
   
-  <%= f.submit 'Update Book' %>
+<%= f.submit 'Update Book' %> 
+<%= link_to "Show", book_path(@book) %>
+"|"
+<%= link_to "Back to List", books_path %>
 
-  
-  <%= link_to "Show", show_book_path(@book.id) %>
-
- <%= link_to "Back", back_book_path(@book.id) %>
-
-
-  
 <% end %>
