--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<meta charset="UTF-8" />
-<head>
-<title>WebCampBackendNew</title>
-<link rel="stylesheet" href="bookers/application.css" />
-</head>
 
-<body>
 <p id="notice"></p>
 <h1>Books</h1>
 <table>
@@ -19,47 +11,22 @@
 </thead>
 
 <tbody>
-<tr>
-<td>リーダブルコード</td>
-<td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-<td><a class="show_1" href="/books/1">Show</a></td>
-<td><a class="edit_1" href="/books/1/edit">Edit</a></td>
-<td><a data-confirm="Are you sure?" class="destroy_1" rel="nofollow" data-method="delete" href="/books/1">Destroy</a></td>
-</tr>
-<tr>
-<td>トラブル知らずのシステム設計</td>
-<td>システム設計の要点を図解で説明してくれます</td>
-<td><a class="show_2" href="/books/2">Show</a></td>
-<td><a class="edit_2" href="/books/2/edit">Edit</a></td>
-<td><a data-confirm="Are you sure?" class="destroy_2" rel="nofollow" data-method="delete" href="/books/2">Destroy</a></td>
-</tr>
-<tr>
-<td>たのしいRuby</td>
-<td>Rubyの入門におすすめです</td>
-<td><a class="show_3" href="/books/3">Show</a></td>
-<td><a class="edit_3" href="/books/3/edit">Edit</a></td>
-<td><a data-confirm="Are you sure?" class="destroy_3" rel="nofollow" data-method="delete" href="/books/3">Destroy</a></td>
-</tr>
-<tr>
+<% @books.each do |book| %>
+  <tr>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+    <td><%= link_to "Show", book_path(book) %></td>
+    <td><%= link_to "Edit", edit_book_path(book) %></td>
+    <td><%= link_to "Destroy", book_path(book), method: :delete, data: { confirm: "Are you sure?" } %></td>
+  </tr>
+<% end %>
 </tbody>
 </table>
 
 <h2>New book</h2>
-<form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
-<input name="utf8" type="hidden" value="" />
-<input type="hidden" name="authenticity_token" value="" />
-<div class="field">
-<label for="book_title">Title</label>
-<input class="book_title" type="text" name="book[title]" id="book_title" />
-</div>
-<div class="field">
-<label for="book_body">Body</label>
-<textarea class="book_body" name="book[body]" id="book_body">
-</textarea>
-</div>
-<div class="actions">
-<input type="submit" name="commit" value="Create Book" data-disable-with="Create Book" />
-</div>
-</form>
-</body>
+<%= form_with model:@book  do |f| %>
+  <%= f.text_field :title %>
+  <%= f.text_area :body %>
+  <%= f.submit "Create book " %>
+<% end %>
 </html>
