--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,13 @@
 
 <h1>Editing Book</h1>
+<% if @book.errors.any? %>
+<%= @book.errors.count %> errors occurred
+<ul>
+<% @book.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
+<% end %>
 <%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
 <h4>Title</h4>
 <%= f.text_field :title %>
