--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,9 +24,17 @@
 </table>
 
 <h2>New book</h2>
+<% if @book.errors.any? %>
+<%= @book.errors.count %> errors occurred
+<ul>
+<% @book.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
+<% end %>
 <%= form_with model:@book  do |f| %>
   <%= f.text_field :title %>
   <%= f.text_area :body %>
-  <%= f.submit "Create book " %>
+  <%= f.submit "Create Book" %>
 <% end %>
 </html>
