--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,8 +4,7 @@
 <h2>Body</h2>
 <p><%= @book.body %></p>
 
-<%= link_to "Show", book_path(@book) %>
 
 <%= link_to "Edit", edit_book_path(@book) %>
 
-<%= link_to "Destroy", @book, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Back", books_path %>
