--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,7 +16,7 @@
   
 <%= f.submit 'Update Book' %> 
 <%= link_to "Show", book_path(@book) %>
-"|"
-<%= link_to "Back to List", books_path %>
+|
+<%= link_to "Back", books_path %>
 
 <% end %>
